k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: webapp
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
